Install custom commands for OhMyZsh via Ansible

--- a/ansible/dotfiles.yml
+++ b/ansible/dotfiles.yml
@@ -10,3 +10,8 @@
         - pryrc
         - spring.rb
         - zshrc
+        - oh-my-zsh/custom/bundler.plugin.zsh
+        - oh-my-zsh/custom/git.plugin.zsh
+        - oh-my-zsh/custom/spring.plugin.zsh
+        - oh-my-zsh/custom/unix.plugin.zsh
+        - oh-my-zsh/custom/vim.plugin.zsh
