--- a/ansible/vim.yml
+++ b/ansible/vim.yml
@@ -4,11 +4,9 @@
     - file: src={{ curdir }}/{{ item }} dest=~/.{{ item }} state=link
       with_items:
         - vimrc
-
+        - vimrc.bundles
     - git:
         repo: 'https://github.com/VundleVim/Vundle.vim.git'
         dest: ~/.vim/bundle/Vundle.vim
-
     - command: vim +PluginInstall +qall
-
     - command: ~/.vim/bundle/YouCompleteMe/install.py --clang-completer
