--- a/ansible/homebrew_apps.yml
+++ b/ansible/homebrew_apps.yml
@@ -23,3 +23,4 @@
     - command: brew install vim
     - command: brew install wget
     - command: brew install node
+    - command: brew install sshrc
