--- a/ansible/homebrew_apps.yml
+++ b/ansible/homebrew_apps.yml
@@ -24,3 +24,5 @@
     - command: brew install wget
     - command: brew install node
     - command: brew install sshrc
+    - command: brew install openssl
+    - command: brew link --force openssl # To avoid using flag --with-openssl-dir=/usr/local/opt/openssl
