--- a/ansible/configure_vim.yml
+++ b/ansible/configure_vim.yml
@@ -5,9 +5,8 @@
       with_items:
         - vimrc
         - vimrc.bundles
-    - git:
-        repo: 'https://github.com/VundleVim/Vundle.vim.git'
-        dest: ~/.vim/bundle/Vundle.vim
-    - command: vim +PluginInstall +qall
+    - file: path=~/.vim/autoload state=directory
+    - get_url: url=https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim dest=~/.vim/autoload/plug.vim
+    - command: vim +PlugInstall
     - command: ~/.vim/bundle/YouCompleteMe/install.py --clang-completer
     - command: npm -g install instant-markdown-d
