--- a/ansible/configure_vim.yml
+++ b/ansible/configure_vim.yml
@@ -7,6 +7,6 @@
         - vimrc.bundles
     - file: path=~/.vim/autoload state=directory
     - get_url: url=https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim dest=~/.vim/autoload/plug.vim
-    - command: vim +PlugInstall
-    - command: ~/.vim/bundle/YouCompleteMe/install.py --clang-completer
+    - command: vim +PlugInstall +qall
+    - command: ~/.vim/plugged/YouCompleteMe/install.py --clang-completer
     - command: npm -g install instant-markdown-d
