Try to use gem-ctags with bundler.vim

--- a/ansible/configure_vim.yml
+++ b/ansible/configure_vim.yml
@@ -10,3 +10,5 @@
     - command: vim +PlugInstall +qall
     - command: ~/.vim/plugged/YouCompleteMe/install.py --clang-completer
     - command: npm -g install instant-markdown-d
+    - command: gem install gem-ctags
+    - command: gem ctags
