--- a/ansible/configure_dotfiles.yml
+++ b/ansible/configure_dotfiles.yml
@@ -16,6 +16,7 @@
         - oh-my-zsh/custom/spring.plugin.zsh
         - oh-my-zsh/custom/unix.plugin.zsh
         - oh-my-zsh/custom/vim.plugin.zsh
+        - oh-my-zsh/custom/rspec.plugin.zsh
         - sshrc
     - file: src={{ curdir }}/zshrc dest=~/.zshenv state=link
 
