--- a/ansible/install_homebrew_apps.yml
+++ b/ansible/install_homebrew_apps.yml
@@ -1,7 +1,7 @@
 ---
 - hosts: all
   tasks:
-    - command: brew services list # e.g. allow 'brew services start mysql command'
+    - command: brew tap homebrew/services # e.g. allow 'brew services start mysql' command
     - command: brew install ack
     - command: brew install cmake
     - command: brew install ctags
