Fix misspelling in configure_dotfiles.yml

--- a/ansible/configure_dotfiles.yml
+++ b/ansible/configure_dotfiles.yml
@@ -1,6 +1,6 @@
 ---
 - hosts: all
-  takks:
+  tasks:
     - file: path=~/.zsh/custom state=directory
     - file: src={{ curdir }}/{{ item }} dest=~/.{{ item }} state=link
       with_items:
