Install homebrew apps as services

--- a/ansible/install_homebrew_apps.yml
+++ b/ansible/install_homebrew_apps.yml
@@ -1,36 +1,44 @@
 ---
 - hosts: all
   tasks:
-    - command: brew tap homebrew/services # e.g. allow 'brew services start mysql' command
-    - command: brew install cmake
-    - command: brew install ctags
-    - command: brew install Caskroom/cask/java # For Elasticsearch
-    - command: brew install elasticsearch
-    - command: brew install git
-    - command: brew install go
-    - command: brew install imagemagick
-    - command: brew install leiningen
-    - command: brew install mongodb
-    - command: brew install mysql
+    - shell: brew tap homebrew/services # e.g. allow 'brew services start mysql' command
+    - shell: brew install cmake
+    - shell: brew install ctags
+    - shell: brew install Caskroom/cask/java # For Elasticsearch
 
-    # - command: brew install phantomjs # v2 currently does not work with OS X El Capitan, use lines below:
-    - command: brew install npm
-    - command: npm install phantom phantomjs -g
+    - shell: brew install {{ item }} && ln -sfv /usr/local/opt/{{ item }}/*.plist ~/Library/LaunchAgents
+      with_items:
+        - elasticsearch
+        - kibana
+        - memcached
+        - mongodb
+        - mysql
+        - postgresql
+        - redis
+        - rabbitmq
+        - selenium-server-standalone
 
-    - command: brew install rbenv
+    - shell: brew install git
+    - shell: brew install go
+    - shell: brew install imagemagick
+    - shell: brew install leiningen
+
+    - shell: brew install npm
+
+    # - shell: brew install phantomjs # v2 currently does not work with OS X El Capitan, use lines below:
+    - shell: npm install phantom phantomjs -g
+
+    - shell: brew install rbenv
     - file: path=~/.rbenv state=absent
     - file: src=/usr/local/opt/rbenv dest=~/.rbenv state=link
+    - shell: brew link --force openssl # To avoid using flag --with-openssl-dir=/usr/local/opt/openssl
 
-    - command: brew install postgresql
-    - command: brew install rabbitmq
-    - command: brew install redis
-    - command: brew install ruby-build
-    - command: brew install sphinx
-    - command: brew install the_silver_searcher
-    - command: brew install vim
-    - command: brew install wget
-    - command: brew install node
-    - command: brew install sshrc
-    - command: brew install openssl
-    - command: brew link --force openssl # To avoid using flag --with-openssl-dir=/usr/local/opt/openssl
-    - command: brew install fzf
+    - shell: brew install ruby-build
+    - shell: brew install sphinx
+    - shell: brew install the_silver_searcher
+    - shell: brew install vim
+    - shell: brew install wget
+    - shell: brew install node
+    - shell: brew install sshrc
+    - shell: brew install openssl
+    - shell: brew install fzf
