--- a/ansible/configure_dotfiles.yml
+++ b/ansible/configure_dotfiles.yml
@@ -8,6 +8,8 @@
       become: yes
       become_user: root
 
+    - shell: rm -rf ~/.zsh
+
     - file: path=~/.zsh/custom state=directory
     - file: src={{ curdir }}/{{ item }} dest=~/.{{ item }} state=link
       with_items:
@@ -27,6 +29,8 @@
         - zsh/custom/rspec.plugin.zsh
         - zsh/custom/sshrc.plugin.zsh
         - sshrc
+
+    - shell: git clone git@github.com:zsh-users/zsh-autosuggestions.git ~/.zsh/zsh-autosuggestions
 
     - file: path=~/.sshrc.d state=directory
     - file: src={{ curdir }}/zsh/custom/{{ item }} dest=~/.sshrc.d/{{ item }} state=link
