--- a/iterm2/com.googlecode.iterm2.plist
+++ b/iterm2/com.googlecode.iterm2.plist
@@ -204,6 +204,8 @@
 	<true/>
 	<key>MaxVertically</key>
 	<false/>
+	<key>NSColorPanelMode</key>
+	<string>6</string>
 	<key>NSNavLastRootDirectory</key>
 	<string>~/Documents/projects/my/dotfiles/iterm2</string>
 	<key>NSNavPanelExpandedSizeForOpenMode</key>
@@ -231,8 +233,15 @@
 	<array/>
 	<key>NSTableView Sort Ordering KeyBingingTable</key>
 	<array/>
+	<key>NSToolbar Configuration com.apple.NSColorPanel</key>
+	<dict>
+		<key>TB Is Shown</key>
+		<integer>1</integer>
+	</dict>
+	<key>NSWindow Frame NSColorPanel</key>
+	<string>357 327 228 325 0 0 1440 877 </string>
 	<key>NSWindow Frame Preferences</key>
-	<string>464 224 924 485 0 0 1440 877 </string>
+	<string>411 162 924 485 0 0 1440 877 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
 	<string>0 0 1388 877 0 0 1440 877 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
@@ -258,11 +267,11 @@
 			<key>Ansi 1 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.0</real>
+				<real>0.37254902720451355</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.37254902720451355</real>
 				<key>Red Component</key>
-				<real>0.73333334922790527</real>
+				<real>0.84313726425170898</real>
 			</dict>
 			<key>Ansi 10 Color</key>
 			<dict>
@@ -339,20 +348,20 @@
 			<key>Ansi 4 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.73333334922790527</real>
+				<real>0.84313726425170898</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.68627452850341797</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.52941179275512695</real>
 			</dict>
 			<key>Ansi 5 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.73333334922790527</real>
+				<real>0.37254902720451355</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.37254902720451355</real>
 				<key>Red Component</key>
-				<real>0.73333334922790527</real>
+				<real>0.84313726425170898</real>
 			</dict>
 			<key>Ansi 6 Color</key>
 			<dict>
@@ -1473,7 +1482,7 @@
 	<key>NoSyncTimeOfLastPromo</key>
 	<real>477734616.15038103</real>
 	<key>NoSyncTimeOfLastPromoDownload</key>
-	<real>480797978.549254</real>
+	<real>482974652.90587801</real>
 	<key>OnlyWhenMoreTabs</key>
 	<true/>
 	<key>OpenArrangementAtStartup</key>
@@ -1536,7 +1545,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2016-03-27T18:58:06Z</date>
+	<date>2016-04-22T19:27:25Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>ShowBookmarkName</key>
