Add KeeWeb and some other things to the list

--- a/ansible/install_homebrew_cask_apps.yml
+++ b/ansible/install_homebrew_cask_apps.yml
@@ -29,4 +29,7 @@
         - karabiner
         - paragon-ntfs
         - iterm2
+        - keeweb
+        - franz
+        - ccmenu
     - shell: "{{ curdir }}/iterm2/install-settings.sh" # run in Terminal
