Use GNU find for fzf

--- a/ansible/install_homebrew_apps.yml
+++ b/ansible/install_homebrew_apps.yml
@@ -28,6 +28,7 @@
         - node
         - unar
         - python3
+        - findutils # to use gfind with -print option
 
     # java for Elasticsearch
     - shell: |
