--- a/ansible/install_homebrew_cask_apps.yml
+++ b/ansible/install_homebrew_cask_apps.yml
@@ -10,7 +10,6 @@
         - skype
         - dropbox
         - sourcetree
-        - evernote
         - tunnelblick
         - sequel-pro
         - mongohub
@@ -20,6 +19,7 @@
         - the-unarchiver
         - mplayerx
         - utorrent
+        - licecap # record gifs from screen
         - libreoffice
         - cyberduck
         - slack
