--- a/ansible/install_homebrew_apps.yml
+++ b/ansible/install_homebrew_apps.yml
@@ -29,6 +29,7 @@
         - unar
         - python3
         - findutils # to use gfind with -print option
+        - logstash
 
     # java for Elasticsearch
     - shell: |
