--- a/ansible/configure_dotfiles.yml
+++ b/ansible/configure_dotfiles.yml
@@ -8,8 +8,7 @@
       become: yes
       become_user: root
 
-    - shell: rm -rf ~/.zsh
-
+    - file: path=~/.zsh state=absent
     - file: path=~/.zsh/custom state=directory
     - file: src={{ curdir }}/{{ item }} dest=~/.{{ item }} state=link
       with_items:
@@ -28,9 +27,15 @@
         - zsh/custom/vim.plugin.zsh
         - zsh/custom/rspec.plugin.zsh
         - zsh/custom/sshrc.plugin.zsh
+        - zsh/sync_history.sh
         - sshrc
 
-    - shell: git clone git@github.com:zsh-users/zsh-autosuggestions.git ~/.zsh/zsh-autosuggestions
+    - shell: |
+        if ! [[ "$(eval "crontab -l | grep 'sync_history.sh$'")" ]] ; then
+          (crontab -l; echo "*/5 * * * * ~/.zsh/sync_history.sh") | crontab -
+        fi
+
+    - git: repo=git@github.com:zsh-users/zsh-autosuggestions.git dest=~/.zsh/zsh-autosuggestions clone=yes update=yes
 
     - file: path=~/.sshrc.d state=directory
     - file: src={{ curdir }}/zsh/custom/{{ item }} dest=~/.sshrc.d/{{ item }} state=link
