--- a/ansible/configure_dotfiles.yml
+++ b/ansible/configure_dotfiles.yml
@@ -31,10 +31,10 @@
 
     - shell: |
         if ! [[ "$(eval "crontab -l | grep 'zsh_history$'")" ]] ; then
-          (crontab -l; echo "*/5 * * * * cp ~/.zsh_history $BACKUP_PATH/zsh_history") | crontab -
+          (crontab -l; echo "*/5 * * * * cp -p ~/.zsh_history $BACKUP_PATH/zsh_history") | crontab -
         fi
 
-    - git: repo=git@github.com:zsh-users/zsh-autosuggestions.git dest=~/.zsh/zsh-autosuggestions clone=yes update=yes
+    - git: repo=git@github.com:zsh-users/zsh-autosuggestions.git dest=~/.zsh/zsh-autosuggestions clone=yes update=no
 
     - file: path=~/.sshrc.d state=directory
     - file: src={{ curdir }}/zsh/custom/{{ item }} dest=~/.sshrc.d/{{ item }} state=link
