Use custom zsh theme

--- a/ansible/configure_dotfiles.yml
+++ b/ansible/configure_dotfiles.yml
@@ -29,6 +29,8 @@
         - zsh/custom/sshrc.plugin.zsh
         - sshrc
 
+    - file: src={{ curdir }}/zsh/themes/exaspark.zsh-theme dest=~/.oh-my-zsh/themes/exaspark.zsh-theme state=link
+
     - shell: |
         if ! [[ "$(eval "crontab -l | grep 'zsh_history$'")" ]] ; then
           (crontab -l; echo "*/5 * * * * cp -p ~/.zsh_history $BACKUP_PATH/zsh_history") | crontab -
