--- a/ansible/install_homebrew_cask_apps.yml
+++ b/ansible/install_homebrew_cask_apps.yml
@@ -3,7 +3,7 @@
   tasks:
     - shell: |
         if ! [[ "$(eval "brew cask list | grep '^{{ item }}$'")" ]] ; then
-          brew install {{ item }}
+          brew cask install {{ item }}
         fi
       with_items:
         - google-chrome
