--- a/ansible/configure_vim.yml
+++ b/ansible/configure_vim.yml
@@ -5,10 +5,15 @@
       with_items:
         - vimrc
         - vimrc.bundles
+
     - file: path=~/.vim/autoload state=directory
     - get_url: url=https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim dest=~/.vim/autoload/plug.vim
-    - shell: vim +PlugInstall +qall
-    - shell: ~/.vim/plugged/YouCompleteMe/install.py --clang-completer
+    - shell: vim +PlugInstall! +qall
+
+    - stat: path=~/.vim/plugged/YouCompleteMe/third_party/ycmd/ycm_core.so
+      register: ycm_core
+    - shell: ~/.vim/plugged/YouCompleteMe/install.py --gocode-completer --tern-completer
+      when: ycm_core.stat.exists == False
+
     - shell: npm -g install instant-markdown-d
     - shell: gem install gem-ctags
-    - shell: gem ctags
