--- a/ansible/install_homebrew_apps.yml
+++ b/ansible/install_homebrew_apps.yml
@@ -34,6 +34,7 @@
         - findutils # to use gfind with -print option
         - logstash
         - elixir
+        - tmux-cssh
 
     # java for Elasticsearch
     - shell: brew cask list | grep '^java$'
