Try Zoom and Typora

--- a/ansible/install_homebrew_cask_apps.yml
+++ b/ansible/install_homebrew_cask_apps.yml
@@ -32,4 +32,6 @@
         - keeweb
         - franz
         - ccmenu
+        - zoomus
+        - typora
     - shell: "{{ curdir }}/iterm2/install-settings.sh" # run in Terminal
