Use go2shell app for finder

--- a/ansible/install_homebrew_cask_apps.yml
+++ b/ansible/install_homebrew_cask_apps.yml
@@ -34,4 +34,5 @@
         - zoomus
         - typora
         - spectacle
+        - go2shell
     - shell: "{{ curdir }}/iterm2/install-settings.sh" # run in Terminal
