--- a/ansible/configure_dotfiles.yml
+++ b/ansible/configure_dotfiles.yml
@@ -26,6 +26,7 @@
         - zsh/custom/rspec.plugin.zsh
         - zsh/custom/sshrc.plugin.zsh
         - sshrc
+        - tern-project
 
     - file: src={{ curdir }}/zsh/themes/exaspark.zsh-theme dest=~/.oh-my-zsh/themes/exaspark.zsh-theme state=link
 
