--- a/ansible/configure_vim.yml
+++ b/ansible/configure_vim.yml
@@ -12,7 +12,9 @@
 
     - stat: path=~/.vim/plugged/YouCompleteMe/third_party/ycmd/ycm_core.so
       register: ycm_core
-    - shell: ~/.vim/plugged/YouCompleteMe/install.py --clang-completer --gocode-completer --tern-completer
+    - shell: ./install.py --clang-completer --gocode-completer --tern-completer
+      args:
+        chdir: ~/.vim/plugged/YouCompleteMe
       when: ycm_core.stat.exists == False
 
     - shell: npm -g install instant-markdown-d
