Install Vim with python3 support because of YCM issues

--- a/ansible/install_homebrew_apps.yml
+++ b/ansible/install_homebrew_apps.yml
@@ -25,7 +25,8 @@
         - leiningen
         - sphinx
         - the_silver_searcher
-        - vim
+        - python3
+        - "vim --with-python3"
         - wget
         - sshrc
         - fzf
